--- a/style.css
+++ b/style.css
@@ -201,6 +201,8 @@ input[type=range]::-webkit-slider-thumb{
   height:100vh;
   color:white;
   font-size:1.4rem;
+  box-shadow:none;
+  border:none;
 }
 #cofing > div:nth-child(1){
   display:flex;
@@ -219,7 +221,9 @@ input[type=range]::-webkit-slider-thumb{
 #cofing  #tam{
   display:flex;
   align-items:center;
+  justify-content:center;
   flex-direction:row;
+  width:90%;
   margin:20px 0px;
   gap:20px;
 }
@@ -237,7 +241,7 @@ input[type=range]::-webkit-slider-thumb{
   outline:none;
 }
 #cofing .btn_ativar{
-  width:100px;
+  width:140px;
   height:40px;
   margin:20px 0px;
 }
